fix wobbly grid on mobile

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -160,6 +160,7 @@
 .qvalue {
   pointer-events: none;
   color: #aaa;
+  position: absolute;
 }
 
 .qhighest {
